fix: eslint prettier config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,6 +2,6 @@
   "tabWidth": 2,
   "singleQuote": true,
   "endOfLine": "lf",
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "useTabs": false
 }
