--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "chokidar": "^3.5.1",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.1",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -54,6 +56,7 @@
   },
   "dependencies": {
     "esbuild": "^0.11.20",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "ts-jest": "^26.5.6"
   }
 }
