--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "prettier": "2.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-standard": "^22.0.0"
+    "stylelint-config-standard": "^22.0.0",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "esbuild": "^0.11.20",
